<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="APP_ID">264544953693327</string>
    <string name="settings">Settings</string>
    <string name="action_people">With whom?</string>
    <string name="action_people_default">Select friends</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="single_user_selected">%1$s</string>
    <string name="two_users_selected">%1$s and %2$s</string>
    <string name="multiple_users_selected">%1$s and %2$s others</string>
    <string name="action_location">Where are you?</string>
    <string name="action_location_default">Select one</string>
    <string name="share">Share</string>
    <string name="setting_lang_title">Lang</string><string name="mail">mail: densely.a@gmail.com</string><string name="version">1.0.0</string><string name="about_short">Simple gallery to view images for Android</string><string name="about_long">To view the images, you must select a folder with pictures. You can flipping images and zooming their very high.</string>

</resources>
