<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/redBlack"
              android:baselineAligned="false">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="4">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivIcon"
                android:layout_gravity="center"
                android:background="@drawable/ic_launcher"
                android:layout_marginTop="8dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:layout_weight="1"
            android:layout_marginTop="8dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/tvAbout"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/about"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textSize="14dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:id="@+id/tvAbout1"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/dimgray"
                android:textSize="11dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_short"
                android:id="@+id/tvAbout2"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/about"
                android:layout_marginTop="8dp"
                android:textSize="12dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_long"
                android:id="@+id/tvAbout3"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/about"
                android:singleLine="false"
                android:textSize="12dp"
                android:layout_marginTop="3dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:id="@+id/tvAbout4"
                android:layout_gravity="left|center_vertical"
                android:textColor="@color/about"
                android:textSize="11dp"
                android:layout_marginTop="5dp" android:layout_marginBottom="8dp"/>
    </LinearLayout>
</LinearLayout>